# libgravel

./: CMakeLists.txt  readme.md
examples/: CMakeLists.txt
examples/src/: dynamic_value.cpp  unique_function.cpp
include/gravel/: dynamic_value.hpp  unique_function.hpp
include/gravel/detail/: concepts.hpp  dynamic_value_properties.hpp  operations_table.hpp
tests/: CMakeLists.txt
tests/src/: test_dynamic_value.cpp  test_unique_function.cpp
